# Athena-v1

./: .gitignore  CHANGELOG.md  CURRENT_CONTEXT.md  Cargo.toml  MANIFEST.txt  NEXT_TASK.md  NON_NEGOTIABLES.md  USER_PROFILE.md  VISION.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/athena-app/: Cargo.toml  tauri.conf.json
crates/athena-app/capabilities/: default.json
crates/athena-app/icons/: icon.icns
crates/athena-app/src/: day_rollover_scheduler.rs  keychain.rs  main.rs  oauth_loopback.rs  routine_scheduler.rs  routine_scheduler.rs:Zone.Identifier  scheduler.rs
crates/athena-app/src/commands/: ai.rs  bootstrap.rs  deadlines.rs  integrations.rs  mod.rs  onboarding.rs  planner.rs  routine.rs
crates/athena-data/: Cargo.toml
crates/athena-data/migrations/: V10__ask_athena_conversations.sql  V1__baseline.sql  V2__onboarding_schema.sql  V3__schedule_disruptions.sql  V4__integrations.sql  V5__oauth_connectors.sql  V6__routine_questionnaires.sql  V7__routine_questionnaire_schedule.sql  V8__routine_questionnaire_free_text.sql  V9__ask_athena_history.sql
crates/athena-data/src/: connection.rs  error.rs  lib.rs
crates/athena-data/src/repositories/: ask_athena_history.rs  course.rs  deadline.rs  decision.rs  disruption.rs  event_log.rs  integrations.rs  mod.rs  profile.rs  routine.rs  semester.rs
crates/athena-domain/: Cargo.toml
crates/athena-domain/src/: error.rs  lib.rs  planner.rs  priority.rs
crates/athena-events/: Cargo.toml
crates/athena-events/src/: error.rs  lib.rs
crates/athena-ingestion/: Cargo.toml  Cargo.toml:Zone.Identifier
crates/athena-ingestion/src/: error.rs  lib.rs  sync_status.rs
crates/athena-ingestion/src/connectors/: calendar_ics.rs  codeforces.rs  csv_import.rs  error.rs  github.rs  gmail.rs  google_classroom.rs  leetcode.rs  mod.rs  notion.rs  oauth2.rs  pdf_import.rs
crates/athena-reasoning/: Cargo.toml
crates/athena-reasoning/src/: context.rs  error.rs  lib.rs  output.rs  pipeline.rs  prompt.rs  provider.rs
crates/athena-reasoning/src/capabilities/: ask_athena.rs  daily_briefing.rs  mod.rs  reflection.rs  routine_conversation.rs  weakness_analysis.rs  weekly_planning.rs
crates/athena-reasoning/src/providers/: cloud.rs  gemini.rs  hf.rs  local.rs  mod.rs
docs/ai/: AI_DESIGN.md  DAILY_AGENT.md  DECISION_ENGINE.md  MEMORY_SYSTEM.md  OPPORTUNITY_ENGINE.md  SEMESTER_AGENT.md  TRAJECTORY_ENGINE.md  WEAKNESS_ENGINE.md  WEEKLY_AGENT.md
docs/architecture/: AI_PIPELINE.md  API_INTEGRATIONS.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  EVENT_SYSTEM.md  FOLDER_STRUCTURE.md  MODULES.md
docs/decisions/: README.md
docs/runbooks/: README.md
docs/ui/: ANALYTICS.md  CAREER_VIEW.md  DAILY_PLANNER.md  DASHBOARD.md  HOME_SCREEN.md  SEMESTER_VIEW.md  UI_GUIDELINES.md  WEEKLY_PLANNER.md
docs/vision/: CORE_PRINCIPLES.md  PROJECT_SCOPE.md
phase_docs/: 01_ARCHITECTURE.md  02_DESIGN_SYSTEM.md  03_ONBOARDING.md  04_DATA_MODEL.md  05_OS_HOME.md  06_AI_ENGINE.md  07_INTEGRATIONS.md  08_ADAPTIVE_PLANNER.md  09_DECISION_ENGINE.md  10_ANALYTICS.md  11_LONG_TERM_MEMORY.md  12_ATHENA_PHILOSOPHY.md  12_VERSION_ROADMAP.md
project_docs/: MASTER_SPECIFICATION.md  MILESTONES.md  ROADMAP.md  SPRINTS.md
scripts/: check_ipc_contract.py
src/: App.module.css  App.tsx  main.tsx  router.tsx
src/components/modals/: ChallengeDialogShell.tsx  DailyQuestionnaireModal.tsx  DeepWorkGuardShell.tsx  ModalShell.module.css
src/components/shared/: Card.module.css  Card.tsx  CollapseList.module.css  CollapseList.tsx  ConfidenceBadge.tsx  DensityToggle.tsx  EmptyState.module.css  EmptyState.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  GlassPanel.module.css  GlassPanel.tsx  Icon.tsx  LoadingState.module.css  LoadingState.tsx  NumberDisplay.module.css  NumberDisplay.tsx  SeverityDot.module.css  SeverityDot.tsx  SyncStatusBadge.module.css  SyncStatusBadge.tsx  Timeline.module.css  Timeline.tsx  WizardStepShell.module.css  WizardStepShell.tsx
src/components/shell/: AppShell.module.css  AppShell.tsx  ModalLayer.module.css  ModalLayer.tsx  NavRail.module.css  NavRail.tsx  NavRailItem.module.css  NavRailItem.tsx  TitleBar.module.css  TitleBar.tsx
src/ipc/: bindings.ts
src/mock/: decisionLogFixtures.ts  nowFixtures.ts  semesterFixtures.ts  trajectoryFixtures.ts  types.ts
src/screens/AskAthena/: AskAthena.module.css  index.tsx
src/screens/Deadlines/: Deadlines.module.css  index.tsx
src/screens/DecisionLog/: DecisionCard.module.css  DecisionCard.tsx  DecisionLog.module.css  index.tsx
src/screens/Now/: AiInsightCard.module.css  AiInsightCard.tsx  BottleneckStrip.module.css  BottleneckStrip.tsx  DeepWorkAllocationCard.module.css  DeepWorkAllocationCard.tsx  HealthStrip.module.css  HealthStrip.tsx  MissionStrip.module.css  MissionStrip.tsx  Now.module.css  QuickLaunch.module.css  QuickLaunch.tsx  RoutineQuestionnaireCard.module.css  RoutineQuestionnaireCard.tsx  VerdictCard.module.css  VerdictCard.tsx  index.tsx
src/screens/Onboarding/: Onboarding.module.css  ProfileWizard.module.css  ProfileWizard.tsx  index.tsx
src/screens/Semester/: AdvancedTab.tsx  CareerTab.tsx  PullDeadlinesPanel.tsx  Semester.module.css  index.tsx
src/screens/SemesterSetup/: ConnectorsStep.tsx  CourseEntryStep.tsx  DeadlineEntryStep.tsx  PhaseStrip.module.css  PhaseStrip.tsx  SemesterAtAGlance.tsx  SemesterSetup.module.css  WizardStepShell.tsx  index.tsx  types.ts
src/screens/Settings/: ApiKeyPanel.tsx  ConnectorsSection.tsx  QuestionnaireScheduleSection.module.css  QuestionnaireScheduleSection.tsx  RoutineTriggerSection.tsx  Settings.module.css  index.tsx
src/screens/Trajectory/: CareerThreadSection.module.css  CareerThreadSection.tsx  CgpaProjectionCard.module.css  CgpaProjectionCard.tsx  CodeforcesSnapshotCard.tsx  InternshipTrackerCard.tsx  LeetCodeSnapshotCard.tsx  MastersTrackerCard.tsx  MetricSwimlane.module.css  index.tsx  (+6 more)
src/state/: bootstrapContext.tsx  densityContext.tsx  modalContext.tsx  navigationContext.tsx
src/theme/: glass.css  motion.ts  tokens.css  typography.css
tests/e2e/: README.md
